--- a/css/sass/_base-atoms.scss
+++ b/css/sass/_base-atoms.scss
@@ -7,7 +7,7 @@ body {
 	font-size: 13px;
 	line-height: 18px;
 	color: $colorText;
-	background-color: $colorPrimaryHero;
+	// background-color: $colorPrimaryHero;
 }
 
 /* Wrap content in white */
