--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -55,7 +55,7 @@
 		display: none;
 		position: absolute;
 		z-index: 30;
-		top: 129px;
+		top: 85px; // 129px;
 		left: 0;
 		right: 0;
 		background: $colorPrimary;
@@ -233,10 +233,11 @@
 
 }
 
-
+/*
 body.admin-bar #nav .nav-flyout {
 	top: 151px;
 }
+*/
 
 .no-js #nav li.level1:hover .nav-flyout, 
 .no-js #nav li.level1:focus .nav-flyout, 
@@ -251,12 +252,17 @@ body.admin-bar #nav .nav-flyout {
 		right: 0;
 		background: #fff;
 		z-index: 200;
-		@include box-shadow(0 1px 3px rgba(0,0,0,0.3));
+		
 	}
 	
 	#nav .nav-flyout {
 		top: 85px;
 	}
+}
+.nav-scrolled {
+    #header {
+	@include box-shadow(0 1px 3px rgba(0,0,0,0.3));
+    }
 }
 
 
