Bugfixes vom Theme Check Videoportal-URL ist nun änderbar über Theme Options

--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -1800,3 +1800,12 @@ ul.files {
 	}
 }
 
+/*
+* WordPress required classes
+*/
+.sticky, 
+.gallery-caption, 
+.bypostauthor {
+    font-size: 15px;
+    line-height: 22px;
+}
