--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -601,14 +601,26 @@ ul.person-info {
 	
 	.post-meta-categories:before {
 		    @extend .fa;
-		    @extend .fa-tag;
+		    @extend .fa-archive;
 	}
 	.post-meta-date:before {
 		    @extend .fa;
 		    @extend .fa-calendar;
 	}
+	.post-meta-tags:before {
+		    @extend .fa;
+		    @extend .fa-tags;
+	}
+	.post-meta-tags {
+	   margin-left: 10px;
+	    
+	    
+	}
 	.meta-footer {
 	    clear: both;
+	    a:hover {
+		text-decoration: underline;
+	    }
 	}
 }
 .post-meta {
@@ -618,6 +630,32 @@ ul.person-info {
 	    color: $colorPrimary;
 	    font-family: $fontStack;
 }
+
+
+.post-meta-tags {
+	@include inline-block;
+	
+	ul {
+		@include no-list;
+		@include inline-block;
+		
+		li {
+			@include no-list;
+			@include inline-block;
+			margin: 0;
+			font-size: 13px;
+			a {
+				@include inline-block;
+				text-decoration: none;
+			}
+			
+			a:hover, a:focus {
+				
+			}
+		}
+	}	
+}
+
 
 
 .news-image {
@@ -669,7 +707,6 @@ ul.person-info {
 	}
 	
 }
-
 
 
 .news-meta-categories {
