--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -24,21 +24,17 @@
 /* Language switcher */
 .mlp_language_box {
 	float: right;
-	position: relative;
 	height: 30px;
-	width: 60px;
 	margin-top: 5px;
 	background: #fff;
 	@include border-radius(20px);
 	background: #fff;
-	z-index: 400;
+	z-index: 200;
 	
 	ul {
 		@include no-list;
-		position: absolute;
 		z-index: 201;
-		top: 0;
-		right: 0;
+
 		
 		li {
 			@include no-list;
@@ -52,8 +48,7 @@
 				font-size: 13px;
 				line-height: 20px;
 				height: 20px;
-				padding: 5px 10px;
-				width: 40px;
+				padding: 5px 30px 5px 10px;
 				text-transform: uppercase;
 				font-weight: bold;
 				
@@ -63,7 +58,7 @@
 			}
 			
 			a:hover, a:focus {
-				background-color: $colorLightest !important;
+				background-color: $colorLightest;
 			}
 			
 			a.ext-link {
@@ -75,9 +70,11 @@
 			display: block;
 			
 			a {
-				background-image: url('../img/icon-globe.png') !important;
+				background-image: url('../img/icon-globe.png');
 				background-repeat: no-repeat;
-				background-position: 34px center;
+				background-position: right;
+				margin-right: 5px;
+				
 			}
 		}
 		
@@ -88,7 +85,7 @@
 				display: block;
 				
 				a {
-					background-color: #fff !important;
+					background-color: #fff;
 				}
 			}
 		}
