offset oben für logobereich um 5px erhöht padding für listelements bei listen in sidebar von 20 px auf 5 reduziert

--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -20,7 +20,7 @@
 	    vertical-align: text-bottom;
 	    text-align: left;
 	    max-height: 85px;
-	    margin: 10px 0;
+	    margin: 15px 0 5px 0;
 	    a {
 		color: $colorPrimary;
 		
