SUbtitle für Pages/Pages vereinheitlicht

--- a/css/sass/_base-atoms.scss
+++ b/css/sass/_base-atoms.scss
@@ -204,7 +204,7 @@ h2 {
 	&.subtitle {
 		font-size: 18px;
 		line-height: 22px;
-		padding: 0 0 22px 0;		
+		padding: 20px 0 22px 0;		
 	}
 	
 	&.menu-header {
