--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -783,6 +783,18 @@ ul.person-info {
 		    @extend .fa;
 		    @extend .fa-calendar-o;
 		}
+		.post-meta-kontakt:before {
+		    @extend .fa;
+		    @extend .fa-user;
+		}
+		.post-meta-defaulttype:before {
+		    @extend .fa;
+		    @extend .fa-bookmark;
+		}
+		.post-meta-news:before {
+		    @extend .fa;
+		    @extend .fa-comment;
+		}
 		
 	}
 	h3 .ext-link,  
@@ -795,10 +807,15 @@ ul.person-info {
 			text-decoration: underline;
 		}
 	}
-	.post-meta-category {
+	.post-meta-news,
+	.post-meta-category,
+	.post-meta-defaulttype, 
+	.post-meta-kontakt {
 	    margin-right: 10px;
 	}
-	
+	.content-person {
+	    border: none;
+	}
 	
 }
 
