--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -36,7 +36,7 @@
 	img {
 	    max-height: 85px;
 	    max-width: 300px;
-	    // height: 65px;
+	    height: 65px;
 	    width: auto;
 	    padding-right: 10px;
 	    
