--- a/css/sass/_base-molecules.scss
+++ b/css/sass/_base-molecules.scss
@@ -537,9 +537,9 @@
 			color: $colorLight;
 		}
 	}
-	.compactindex .span3 {
-	    width: 70%;	    
-	}
+	// .compactindex .span3 {
+	//    width: 70%;	    
+	//  }
 }
 
 ul.person-info {
