--- a/css/sass/_variables.scss
+++ b/css/sass/_variables.scss
@@ -1,6 +1,6 @@
 
 // Konstante fuer das Design
- $farbfamilie: 'zuv';
+ $farbfamilie: 'rw';
  
 // Define breakpoints
 $breakSM: 480px;
@@ -78,7 +78,7 @@ $colorPrimaryHero:	    $colorPrimary;
     $PalettonDunkelste:	#42000c;
     $siegelurl: '../img/siegel-rwfak.png';   
 
- }  @else if $farbfamilie == 'tech' {
+ }  @else if $farbfamilie == 'tf' {
     $colorPrimary: $colorTechFak;    
     $PalettonHellste:	#ebecee; // #bfc2c5;
     $PalettonHeller:	#d2d5d7; // #8e949a;
