--- a/css/sass/_base-organisms.scss
+++ b/css/sass/_base-organisms.scss
@@ -606,7 +606,7 @@ body.admin-bar #nav .nav-flyout {
 		}
 		.filter {
 		   display: block;
-		    margin: 0px 20px;
+		    margin: 10px 20px;
 		    label {
 			@include inline-block();
 			width: auto;
@@ -621,6 +621,10 @@ body.admin-bar #nav .nav-flyout {
 		        height:17px;
 			border: 1px solid #bbb;
 			box-shadow: inset 0 1px 1px 0 rgba(0,0,0,.1);
+		    }
+		    .nowrap {
+			@include inline-block();
+			white-space: nowrap;
 		    }
 		}
 		
