--- a/css/sass/_mediaqueries.scss
+++ b/css/sass/_mediaqueries.scss
@@ -381,11 +381,12 @@ Media Queries for Theme FAU-Einrichtungen
 
 	   
 	    #logo {
-		margin: 15px 15px 0 15px;
+		margin: 0 15px;
 		max-height: 50px;
 		img {
 		    max-width: 100%;
 		    max-height: 50px;
+		    margin-top: 10px;
 		}
 	    }
 	
