--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Description: Wordpress-Theme für zentrale Einrichtungen der Friedrich-Alexander
 Version: 1.4.16
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Tags: blue, gray, green, red, silver, white, three-columns, two-columns, one-column, right-sidebar, responsive-layout, featured-images, microformats
+Tags: blue, gray, silver, white, three-columns, two-columns, one-column, right-sidebar, responsive-layout, featured-images, microformats
 Text Domain: fau
 */
 
